--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Application Vocab Builder."
-    />
+    <meta name="description" content="Application Vocab Builder." />
     <title>Vocab Builder</title>
   </head>
   <body>
-    <div id="modal-root"></div>
     <div id="root"></div>
+    <div id="modal-root"></div>
   </body>
 </html>
